Fixed more spacing and added a debug statement.

--- a/src/views/css/style.css
+++ b/src/views/css/style.css
@@ -194,7 +194,7 @@ ul.item_list > li {
 	position: relative;
 	border-top: 1px solid #EAEAEA;
 	width: 100%;
-	height: 43px;
+	height: 51px;
 	padding: 8px 0px;
 }
 
@@ -247,7 +247,7 @@ ul.item_list > li div.duration {
 	position: absolute;
 	right: 0px;
 	width: 6rem;
-	height: 43px;
+	height: 51px;
 	font-size: 1.25rem;
 }
 
